src/main/java/com/example/springbootdemo/error/exceptions/AssignedUserNullException.java
package com.example.springbootdemo.error.exceptions;

public class AssignedUserNullException extends  RuntimeException{
    public AssignedUserNullException(String msg){
        super(msg);
    }
}
